CurrencyConverter/assets/css/app.css
html, body {
    height: 100%;
}

a {
	text-decoration: underline;
}

a:hover {
	cursor: pointer;
}

input:focus::-webkit-input-placeholder{
    color: transparent!important;
}

input:focus::-moz-placeholder{
    color: transparent!important;
}

input:focus:-moz-placeholder{
    color: transparent!important;
}

.container-table {
    display: table;
    vertical-align: middle;
    width: 30%;
    height: auto;
    border: 1px solid;
    padding-bottom: 0.625em;
    background-color: #FCFCFC;
}

.centered {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.font-style, .label-style, .disclaimer {
	font-size: 0.875em;
}

.label-style {
	font-weight: bold;
}

.top-buffer {
	margin-top: 0.625em;
}

.red-alert {
	color: red;
	font-size: 0.6875em;
}

